style.css
* {
  box-sizing: border-box;
}

html,
body {
  position: relative;
  margin: 0;
  padding: 0;
  width: 100%;
  overflow-x: hidden;
  font-family: 'Rubik', sans-serif;
  background-color: white;
  color: #2C2C46;
  overflow: hidden;
  -webkit-overflow-scrolling: touch;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

::-webkit-scrollbar {
    display: none;
}

.show-large { display: none; }
.hide-large { display: block; }
@media(min-width: 1200px){
  .show-large{ display: block; }
  .hide-large { display: none; }
}

strong {
  font-weight: 500;
}

h1 {
	font-family: 'Rubik';
	font-weight: 500;
	font-size: 30px;
	color: #2C2C46;
}

h2 {
	text-align: center;
	font-family: 'Rubik';
	font-weight: 300;
	color: #333;
	font-size: 36px;
	line-height: 40px;
}

h3 {
  font-weight: 500;
  font-size: 28px;
}

p {
	font-family: 'Rubik';
	font-weight: 400;
	font-size: 16px;
	line-height: 26px;
	color: #2C2C46;
}

a {
  text-decoration: none;
  color: #2C2C46;
}

.container {
	display: flex;
  flex-direction: column;
	align-items: center;
	justify-content: center;
	width: 100%;
	max-width: 1s;
  margin: 0 auto;
}


/*TITLE BLOCK*/
.title_block {
	display: flex;
  max-width: 500px;
	flex-direction: column;
}

.header_info {
  margin-left: 5%;
}
.header_info p {
  margin-right: 10px;
  width: 30vw;
}

.title_block h2 {
  text-align: left;
}

.title_block object {
	width: 250px;
}



/*SECTION*/
.section {
  display: flex;
  margin: 0 auto;
  margin-top: 0px;
  align-items: center;
  max-width: 1200px;
  z-index: 3;
}



/*SECTION REVERSE*/
.section_reverse {
  display: flex;
  margin: 0 auto;
  margin-top: 150px;
  align-items: center;
  max-width: 1200px;
  z-index: 3;
}

.slack_window object {
  max-width: 900px;
}

.slack_window {
  width: 70%;
  position: relative;
  right: 20%;
}

.slack_info {
  position: relative;
  right: 5%;
}

.slack_info p {
  text-align: left;
}

.slack_info h2 {
  text-align: left;
}


/*CARD*/
.card {
  display: flex;
  margin: 0 auto;
  max-width: 900px;
  margin-top: 150px;
  align-items: center;
}

.card_info {
	display: flex;
  max-width: 400px;
  margin-right: 100px;
	flex-direction: column;
}

.card_info h2 {
	text-align: left;
}

.card_info p {
	text-align: left;
}



/*CARD REVERSE*/
.card_reverse {
  display: flex;
  margin: 0 auto;
  max-width: 1000px;
  margin-top: 150px;
  align-items: center;
  z-index: 3;
}

.card_info_r {
	display: flex;
  max-width: 600px;
  margin-left: 100px;
	flex-direction: column;
}

.card_info_r h2 {
	text-align: left;
}

.card_info_r p {
	text-align: left;
}


/*FEATURES*/
.feature_set {
  max-width: 1400px;
  display: flex;
  justify-content: center;
  margin: 0 auto;
  margin-top: 200px;
  flex-flow: wrap;
}

.feature {
  display: flex;
  flex-direction: column;
  max-width: 300px;
  height: 300px;
  align-items: center;
  justify-content: center;
  margin: 20px 60px 0 60px;
}

.feature_img {
  display: flex;
  margin-bottom: 10px;
  height: 80px;
  margin-bottom: 40px;
}

.feature_info {
  display: flex;
  height: 200px;
  flex-direction: column;
  align-content: flex-end;
  align-items: center;
}

.feature h2 {
  margin: 0;
  margin-bottom: 15px;
  text-align: center;
  font-size: 30px;
}

.feature p {
  margin: 0px;
  text-align: center;
}
/*  PRICING  */

 .price_cards {
   display: flex;
 }

 .price_tier {
   width: 400px;
   margin: 50px;
   padding-bottom: 50px;
   padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid #f4f6f6;
   border-radius: 6px;
   box-shadow: 0 0 0px rgba(0,0,0,.2);
   transition: 300 ease;
 }

.tier_subtitle {
  margin-bottom: 5px;
  text-align: center;
  font-weight: 300;
  font-size: 20px;
  margin-top: 0px;
}

 .tier_illustration {
   height: 200px;
 }

 .pro {
   width: 400px;
   margin: 50px;
   padding-bottom: 50px;
   padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid #f4f6f6;
   border-radius: 6px;
   box-shadow: 0 0 0px rgba(0,0,0,.2);
   transition: all 300ms ease;
 }

.pro_tier_info {
  width: 275px;
}

 .free {
   width: 400px;
   margin: 50px;
   padding-bottom: 50px;
   padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 6px;
   border: 1px solid white;
   box-shadow: 0 0 30px rgba(0,0,0,.2);
   transition: all 300ms ease;
 }

 .free:hover {
   transform: scale(1.05);
   box-shadow: 0 0 60px rgba(0,0,0,.2);
 }

/*FOOTER*/

.section_footer {
  display: flex;
  align-items: flex-start;
}

.footer {
  background-color: #F4F6F6;
  margin-top: 200px;
  display: flex;
  width: 100vw;
  padding-top: 20px;
}

.footer_info {
	display: flex;
  max-width: 400px;
  margin-right: 200px;
	flex-direction: column;
  justify-content: space-between;
}

.footer_info p {
	text-align: left;
}

.footer_info h3 {
	text-align: left;
  margin-bottom: 0px;
}

.social_links {
  margin-top: 10px;
  margin-bottom: 120px;
}

.social_links a {
  margin: 5px;
  padding-right: 10px;
  transition: all 200ms ease;
}

.social_links i {
  transition: all 200ms ease;
}

.social_links a:hover, i:hover {
  transform: scale(.90);
  opacity: .8;
}

.fa {
  font-size: 30px;
  color: #2C2C46;
}

/*ENDING*/
.ending {
  margin-top: 200px;
  margin-bottom: 100px;
}

.ending_info {
  display: flex;
  align-items: center;
  justify-content: center;
}

.ending_info h2 {
  text-align: center;
  margin-bottom: 100px;
}

/*LEGAL*/

.legal {
  background-color: #F4F6F6;
  display: flex;
  width: 100vw;
}

.legal_content a {
  transition: all 200ms ease;
}

.legal_content a:hover {
  transform: scale(.90);
  opacity: .8;
}


/*CHAT WINDOW*/
.main_illustration {
  position: relative;
	max-width: 800px;
  left: 10%;
  /*bottom: 50px;*/
}

#ClientChat > * {
  opacity: 0;
}

#UserChat > * {
  opacity: 0;
}

#ClientChat2 > * {
  opacity: 0;
}
/* ... */

